--- a/test/css/layout.css
+++ b/test/css/layout.css
@@ -70,6 +70,21 @@ img {vertical-align: middle;}
   margin: 0px auto;
   background-color: #CADDE6;
 }
+
+.selection {
+  text-align: center;
+  width: 240px;
+  height: 48px;
+  border-radius: 50px;
+  background-color: #ffffffa2;
+  color: #48656D;
+  font-family: 'Gamja Flower', cursive;
+  font-size: 15px;
+  z-index: 1;
+}
+
+.selection:hover {background-color: #8d999c;}
+.selection:active {background-color: #8d999c;}
   
 @-webkit-keyframes fade {
   from {opacity: .4} 
