--- a/test/css/page7_com1.css
+++ b/test/css/page7_com1.css
@@ -1,4 +1,4 @@
-.rel1_text1 {
+.com1_text1 {
     margin: 0px auto;
     text-align: center;
     font-size: 18px;
@@ -9,7 +9,7 @@
     position:absolute;
 
     opacity: 0;
-
+    
     animation-name: fadein;
     animation-duration: 1s;
     animation-fill-mode: forwards;
@@ -23,16 +23,14 @@
     -moz-animation-fill-mode: forwards;
 }
 
-.rel1_text2 {
+.com1_text2 {
     margin: 0px auto;
     text-align: center;
-    font-size: 19px;
+    font-size: 18px;
     width: 260px;
     height: auto;
-    color: #ffffff;
-    background-color: #48656D;
     left: 30px;
-    top: 120px;
+    top: 146px;
     position:absolute;
 
     opacity: 0;
@@ -53,14 +51,14 @@
     -moz-animation-fill-mode: forwards;
 }
 
-.rel1_text3 {
+.com1_text3 {
     margin: 0px auto;
     text-align: center;
     font-size: 18px;
     width: 260px;
     height: auto;
     left: 30px;
-    top: 151px;
+    top: 202px;
     position:absolute;
 
     opacity: 0;
@@ -81,16 +79,39 @@
     -moz-animation-fill-mode: forwards;
 }
 
-.rel1_text4 {
-    margin: 0px auto;
-    text-align: center;
-    font-size: 18px;
-    width: 260px;
-    height: auto;
-    left: 30px;
-    top: 190px;
-    position:absolute;
+#Com1s1 {
+    margin-left: auto;
+    margin-right: auto;
+    left: 40px;
+    top: 268px;
+    position: absolute;
+}
 
+#Com1s2 {
+    margin-left: auto;
+    margin-right: auto;
+    left: 40px;
+    top: 328px;
+    position: absolute;
+}
+
+#Com1s3 {
+    margin-left: auto;
+    margin-right: auto;
+    left: 40px;
+    top: 388px;
+    position: absolute;
+}
+
+#Com1s4 {
+    margin-left: auto;
+    margin-right: auto;
+    left: 40px;
+    top: 448px;
+    position: absolute;
+}
+
+#Com1s1, #Com1s2, #Com1s3, #Com1s4 {
     opacity: 0;
     
     animation-name: fadein;
@@ -106,104 +127,5 @@
     -moz-animation-name: fadein;
     -moz-animation-duration: 1s;
     -moz-animation-delay: 2s;
-    -moz-animation-fill-mode: forwards;
-}
-
-#Rel1s1 {
-    margin-left: auto;
-    margin-right: auto;
-    left: 40px;
-    top: 286px;
-    position: absolute;
-}
-
-#Rel1s2 {
-    margin-left: auto;
-    margin-right: auto;
-    left: 40px;
-    top: 346px;
-    position: absolute;
-}
-
-#Rel1s3 {
-    margin-left: auto;
-    margin-right: auto;
-    left: 40px;
-    top: 406px;
-    position: absolute;
-}
-
-#Rel1s4 {
-    margin-left: auto;
-    margin-right: auto;
-    left: 40px;
-    top: 466px;
-    position: absolute;
-}
-
-#Rel1s1, #Rel1s2, #Rel1s3, #Rel1s4 {
-    opacity: 0;
-    
-    animation-name: fadein;
-    animation-duration: 1s;
-    animation-delay: 3s;
-    animation-fill-mode: forwards;
-
-    -webkit-animation-name: fadein;
-    -webkit-animation-duration: 1s;
-    -webkit-animation-delay: 3s;
-    -webkit-animation-fill-mode: forwards;
-
-    -moz-animation-name: fadein;
-    -moz-animation-duration: 1s;
-    -moz-animation-delay: 3s;
-    -moz-animation-fill-mode: forwards;
-}
-
-.Page5_Cloud_Sad {
-    left: -50px;
-    top: 222px;
-    z-index: 1;
-    position: absolute;
-
-    opacity: 0;
-    
-    animation-name: fadein;
-    animation-duration: 1s;
-    animation-delay: 3.3s;
-    animation-fill-mode: forwards;
-
-    -webkit-animation-name: fadein;
-    -webkit-animation-duration: 1s;
-    -webkit-animation-delay: 3.3s;
-    -webkit-animation-fill-mode: forwards;
-
-    -moz-animation-name: fadein;
-    -moz-animation-duration: 1s;
-    -moz-animation-delay: 3.3s;
-    -moz-animation-fill-mode: forwards;
-}
-
-.Page5_Cloud_Happy {
-    left: 180px;
-    top: 440px;
-    z-index: 1;
-    position: absolute;
-    
-    opacity: 0;
-    
-    animation-name: fadein;
-    animation-duration: 1s;
-    animation-delay: 3.3s;
-    animation-fill-mode: forwards;
-
-    -webkit-animation-name: fadein;
-    -webkit-animation-duration: 1s;
-    -webkit-animation-delay: 3.3s;
-    -webkit-animation-fill-mode: forwards;
-
-    -moz-animation-name: fadein;
-    -moz-animation-duration: 1s;
-    -moz-animation-delay: 3.3s;
     -moz-animation-fill-mode: forwards;
 }
