--- a/test/css/page15_inter2.css
+++ b/test/css/page15_inter2.css
@@ -1,12 +1,7 @@
-.IntroText_3 {
-    margin: 0px auto;
-    text-align: center;
-    font-size: 18px;
-    width: 260px;
-    height: auto;
-    left: 30px;
-    top: 159px;
-    position:absolute;
+#Cloud_Sorry {
+    left: 32px;
+    top: 65px;
+    position: absolute;
     z-index: 1;
 
     opacity: 0;
@@ -24,12 +19,46 @@
     -moz-animation-fill-mode: forwards;
 }
 
-.Page2_Cloud {
-    left: 30px;
-    top: 116px;
-    z-index: 0;
-    position: absolute;
+.inter2_text1 {
+    margin: 0px auto;
+    text-align: center;
+    font-size: 17px;
+    width: 280px;
+    height: auto;
+    left: 20px;
+    top: 200px;
+    position:absolute;
+    z-index: 3;
+
+    opacity: 0;
     
+    animation-name: fadein;
+    animation-duration: 1s;
+    animation-delay: 0.5s;
+    animation-fill-mode: forwards;
+
+    -webkit-animation-name: fadein;
+    -webkit-animation-duration: 1s;
+    -webkit-animation-delay: 0.5s;
+    -webkit-animation-fill-mode: forwards;
+
+    -moz-animation-name: fadein;
+    -moz-animation-duration: 1s;
+    -moz-animation-delay: 0.5s;
+    -moz-animation-fill-mode: forwards;
+}
+
+.inter2_text2 {
+    margin: 0px auto;
+    text-align: center;
+    font-size: 17px;
+    width: 280px;
+    height: auto;
+    left: 20px;
+    top: 230px;
+    position:absolute;
+    z-index: 3;
+
     opacity: 0;
     
     animation-name: fadein;
@@ -46,22 +75,16 @@
     -moz-animation-duration: 1s;
     -moz-animation-delay: 1s;
     -moz-animation-fill-mode: forwards;
-
 }
 
-.IntroText_4 {
-    margin: 0px auto;
-    text-align: center;
-    font-size: 18px;
-    width: 260px;
-    height: auto;
-    left: 30px;
-    top: 233px;
-    position:absolute;
+#Cloud_Black_Tears {
+    left: 13px;
+    top: 231px;
+    position: absolute;
     z-index: 1;
 
     opacity: 0;
-
+    
     animation-name: fadein;
     animation-duration: 1s;
     animation-delay: 2s;
@@ -73,21 +96,49 @@
     -webkit-animation-fill-mode: forwards;
 
     -moz-animation-name: fadein;
-    -moz-animation-duration: 2s;
+    -moz-animation-duration: 1s;
     -moz-animation-delay: 2s;
     -moz-animation-fill-mode: forwards;
 }
 
-.NextButton_2 {
+.inter2_text3 {
+    margin: 0px auto;
+    text-align: center;
+    font-size: 17px;
+    width: 280px;
+    height: auto;
+    left: 20px;
+    top: 404px;
+    position:absolute;
+    z-index: 3;
+
+    opacity: 0;
+    
+    animation-name: fadein;
+    animation-duration: 1s;
+    animation-delay: 2.5s;
+    animation-fill-mode: forwards;
+
+    -webkit-animation-name: fadein;
+    -webkit-animation-duration: 1s;
+    -webkit-animation-delay: 2.5s;
+    -webkit-animation-fill-mode: forwards;
+
+    -moz-animation-name: fadein;
+    -moz-animation-duration: 1s;
+    -moz-animation-delay: 2.5s;
+    -moz-animation-fill-mode: forwards;
+}
+
+.NextButton_6 {
     margin-left: auto;
     margin-right: auto;
     left: 100px;
-    top: 341px;
+    top: 453px;
     position: absolute;
-
 }
 
-#next_2 {
+#next_6 {
     opacity: 0;
     
     animation-name: fadein;
