--- a/test/css/page13_aut3.css
+++ b/test/css/page13_aut3.css
@@ -1,13 +1,13 @@
-.IntroText_3 {
+.aut3_text1 {
     margin: 0px auto;
     text-align: center;
-    font-size: 18px;
-    width: 260px;
+    font-size: 17px;
+    width: 280px;
     height: auto;
-    left: 30px;
-    top: 159px;
+    left: 20px;
+    top: 90px;
     position:absolute;
-    z-index: 1;
+    z-index: 3;
 
     opacity: 0;
 
@@ -24,12 +24,50 @@
     -moz-animation-fill-mode: forwards;
 }
 
-.Page2_Cloud {
+#Cloud_After_QQ {
     left: 30px;
-    top: 116px;
-    z-index: 0;
+    top: 90px;
     position: absolute;
+    z-index: 1;
+}
+
+#Cloud_Black_Sad {
+    left: 140px;
+    top: 155px;
+    position: absolute;
+    z-index: 2;
+}
+
+#Cloud_Black_Sad, #Cloud_After_QQ {
+    opacity: 0;
     
+    animation-name: fadein;
+    animation-duration: 1s;
+    animation-delay: 0.5s;
+    animation-fill-mode: forwards;
+
+    -webkit-animation-name: fadein;
+    -webkit-animation-duration: 1s;
+    -webkit-animation-delay: 0.5s;
+    -webkit-animation-fill-mode: forwards;
+
+    -moz-animation-name: fadein;
+    -moz-animation-duration: 1s;
+    -moz-animation-delay: 0.5s;
+    -moz-animation-fill-mode: forwards;
+}
+
+.aut3_text2 {
+    margin: 0px auto;
+    text-align: center;
+    font-size: 17px;
+    width: 260px;
+    height: auto;
+    left: 30px;
+    top: 281px;
+    position:absolute;
+    z-index: 3;
+
     opacity: 0;
     
     animation-name: fadein;
@@ -46,22 +84,21 @@
     -moz-animation-duration: 1s;
     -moz-animation-delay: 1s;
     -moz-animation-fill-mode: forwards;
-
 }
 
-.IntroText_4 {
+.aut3_text3 {
     margin: 0px auto;
     text-align: center;
-    font-size: 18px;
+    font-size: 17px;
     width: 260px;
     height: auto;
     left: 30px;
-    top: 233px;
+    top: 330px;
     position:absolute;
-    z-index: 1;
+    z-index: 3;
 
     opacity: 0;
-
+    
     animation-name: fadein;
     animation-duration: 1s;
     animation-delay: 2s;
@@ -73,21 +110,48 @@
     -webkit-animation-fill-mode: forwards;
 
     -moz-animation-name: fadein;
-    -moz-animation-duration: 2s;
+    -moz-animation-duration: 1s;
     -moz-animation-delay: 2s;
     -moz-animation-fill-mode: forwards;
 }
 
-.NextButton_2 {
+#Aut3s1 {
     margin-left: auto;
     margin-right: auto;
-    left: 100px;
-    top: 341px;
+    left: 40px;
+    top: 400px;
     position: absolute;
-
+    z-index: 2;
 }
 
-#next_2 {
+#Aut3s2 {
+    margin-left: auto;
+    margin-right: auto;
+    left: 40px;
+    top: 460px;
+    position: absolute;
+    z-index: 2;
+}
+
+#Aut3s3 {
+    margin-left: auto;
+    margin-right: auto;
+    left: 40px;
+    top: 520px;
+    position: absolute;
+    z-index: 2;
+}
+
+#Aut3s4 {
+    margin-left: auto;
+    margin-right: auto;
+    left: 40px;
+    top: 580px;
+    position: absolute;
+    z-index: 2;
+}
+
+#Aut3s1, #Aut3s2, #Aut3s3, #Aut3s4 {
     opacity: 0;
     
     animation-name: fadein;
